syntax = "proto3";
package org.okraAx.v3;
option optimize_for = SPEED;
option java_package = "org.okraAx.v3.services";
option java_outer_classname = "ProRelay";
//option java_generic_services = true;

import "Gpc.proto";
import "BeanRelay.proto";

//  relay service.
service RelayService {
    rpc onRelay (RpcOnRelay) returns (GpcVoid);

}